show current endpoint

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -16,8 +16,8 @@
         </div>
         <div id="nav-filters" class="hidden">
           <div class="nav-header">
-            <h4>Filters</h4>
             <a id="back-to-endpoints">(Back)</a>
+            <span id="endpoint-name"></span>
           </div>
           <ul id="filter-list" class="nav-body"></ul>
         </div>
