show fetch status

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -16,8 +16,9 @@
         </div>
         <div id="nav-filters" class="hidden">
           <div class="nav-header">
-            <a id="back-to-endpoints">(Back)</a>
+            <div class="button" id="back-to-endpoints">Back</div>
             <span id="endpoint-name"></span>
+            <div class="button" id="copy-endpoint-url">Copy URL</div>
           </div>
           <ul id="filter-list" class="nav-body"></ul>
         </div>
@@ -60,6 +61,7 @@
           </label>
         </div>
         <div id="feed-preview"></div>
+        <div id="fetch-status"></div>
       </div>
     </div>
     <script type="module" src="app.js"></script>
