--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <div id="navigation-panel">
+      <div id="nav-panel">
         <div id="nav-endpoints">
           <div class="nav-header">
             <h4>Endpoints</h4>
@@ -23,7 +23,7 @@
           <ul id="filter-list" class="nav-body"></ul>
         </div>
       </div>
-      <div id="main">
+      <div id="main-panel">
         <div id="request-param" class="hidden">
           <label for="source"
             >Source
