rename navigation-panel into sidebar

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -7,20 +7,20 @@
   </head>
   <body>
     <div class="container">
-      <div id="nav-panel">
-        <div id="nav-endpoints">
-          <div class="nav-header">
+      <div id="sidebar-panel">
+        <div id="sidebar-endpoints">
+          <div class="sidebar-header">
             <h4>Endpoints</h4>
           </div>
-          <ul id="endpoint-list" class="nav-body"></ul>
+          <ul id="endpoint-list" class="sidebar-body"></ul>
         </div>
-        <div id="nav-filters" class="hidden">
-          <div class="nav-header">
+        <div id="sidebar-filters" class="hidden">
+          <div class="sidebar-header">
             <div class="button" id="back-to-endpoints">Back</div>
             <span id="endpoint-name"></span>
             <div class="button" id="copy-endpoint-url">Copy URL</div>
           </div>
-          <ul id="filter-list" class="nav-body"></ul>
+          <ul id="filter-list" class="sidebar-body"></ul>
         </div>
       </div>
       <div id="main-panel">
