preview feed support

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -60,7 +60,11 @@
             />
           </label>
         </div>
-        <div id="feed-preview"></div>
+        <div id="feed-preview">
+          <div id="rendered"></div>
+          <div id="raw"></div>
+          <div id="json"></div>
+        </div>
         <div id="fetch-status"></div>
       </div>
     </div>
