fix default checked status for the radio buttons

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -67,7 +67,7 @@
                 type="radio"
                 id="rendered-radio-input"
                 name="view"
-                selected
+                checked
               />
               <label for="rendered-radio-input">Rendered</label>
             </div>
