add a reload button

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       <div id="sidebar-panel">
+        <div class="button" id="reload-config-button">Reload Config</div>
         <div id="sidebar-endpoints">
           <div class="sidebar-header">
             <h4>Endpoints</h4>
