fix hidden request-param

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -29,8 +29,8 @@
           <ul id="filter-list" class="sidebar-body"></ul>
         </div>
       </div>
-      <div id="main-panel">
-        <div id="request-param" class="hidden">
+      <div id="main-panel" class="hidden">
+        <div id="request-param">
           <label for="source"
             >Source
             <input
