update source textbox correctly

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -45,11 +45,7 @@
         <div id="request-param">
           <label for="source"
             >Source
-            <input
-              type="text"
-              placeholder="http://your-source/feed.xml"
-              id="source"
-            />
+            <input type="text" placeholder="Source" id="source" />
           </label>
 
           <label for="limit-posts"
