show better feed error on inspector ui

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -77,6 +77,10 @@
             />
           </label>
         </div>
+        <div id="feed-error" class="hidden">
+          <h4>Error detected while processing feed</h4>
+          <p id="feed-error-message"></p>
+        </div>
         <div id="feed-preview">
           <header id="view-mode-selector">
             <div id="rendered-radio" class="radio-button">
