show json-preview on inspector ui

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -96,9 +96,14 @@
               <input type="radio" id="raw-radio-input" name="view" />
               <label for="raw-radio-input">Raw</label>
             </div>
+            <div id="json-radio" class="radio-button">
+              <input type="radio" id="json-radio-input" name="view" />
+              <label for="json-radio-input">Json</label>
+            </div>
           </header>
           <div id="rendered"></div>
           <div id="raw"></div>
+          <div id="json"></div>
         </div>
         <div id="fetch-status"></div>
       </div>
