use <pre> to display errors
it helps when showing contextual syntax error in monospace font.

--- a/inspector/src/index.html
+++ b/inspector/src/index.html
@@ -16,7 +16,7 @@
         <div class="button" id="reload-config-button">Reload Config</div>
         <div id="config-error" class="hidden">
           <h4>Error detected in config</h4>
-          <p id="config-error-message"></p>
+          <pre id="config-error-message"></p>
         </div>
         <div id="sidebar-endpoints">
           <div class="sidebar-header">
@@ -79,7 +79,7 @@
         </div>
         <div id="feed-error" class="hidden">
           <h4>Error detected while processing feed</h4>
-          <p id="feed-error-message"></p>
+          <pre id="feed-error-message"></p>
         </div>
         <div id="feed-preview">
           <header id="view-mode-selector">
