change login page messages

--- a/inspector/src/login.html
+++ b/inspector/src/login.html
@@ -36,7 +36,7 @@
           message.textContent = "Invalid username or password";
         } else if (search.includes("logged_out")) {
           message.textContent = "You have been logged out";
-        } else if (search.includes("requires_login")) {
+        } else if (search.includes("login_required")) {
           message.textContent = "You must be logged in to access that page";
         }
       </script>
